--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<link rel="resource" type="application/l10n" href="./src/viewer.properties"></link>
